--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.14",
+    "@mui/material": "^5.10.14",
     "@onrewind/eslint-config": "^3.3.0",
     "commitizen": "^4.2.5",
     "next": "12.3.0",
@@ -29,9 +33,9 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "8.23.0",
     "eslint-config-next": "12.3.0",
+    "husky": "^8.0.0",
     "prettier": "^2.7.1",
-    "typescript": "4.8.3",
-    "husky": "^8.0.0"
+    "typescript": "4.8.3"
   },
   "config": {
     "commitizen": {
