--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
     "@onrewind/eslint-config": "^3.3.0",
+    "@splidejs/react-splide": "^0.7.12",
+    "autoprefixer": "^10.4.13",
     "commitizen": "^4.2.5",
     "next": "12.3.0",
+    "postcss": "^8.4.21",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@types/node": "18.7.16",
