--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "next": "12.3.0",
     "postcss": "^8.4.21",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "^3.2.4"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.7.16",
